[package]
name = "proj1"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "chatroom-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "chatroom-client"
path = "src/client.rs"

[dependencies]
async-channel = "2.2.0"
async-mutex = "1.4.0"
async-stdin = "0.3.1"
async-stream = "0.3.5"
colored = "2.1.0"
prost = "0.12.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11"
